user's complaint submitted

--- a/src/Components/User/Header/Header.css
+++ b/src/Components/User/Header/Header.css
@@ -10,3 +10,12 @@
     border-radius: 5px;
     padding: 10px;
 }
+
+.logoutBtn{
+    color: rgb(255, 255, 255);
+    background-color: red;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 8px;
+}
