starting to view applied cert

--- a/src/Components/User/CertRequirementDetails/CertDetails.css
+++ b/src/Components/User/CertRequirementDetails/CertDetails.css
@@ -1,14 +1,25 @@
-.mainDivCertDetails{
+.mainDivCertDetails {
     margin-left: 70px;
     margin-top: 50px;
     color: black;
 }
 
-.requireList{
-    font-weight:  bolder;
+.requireList {
+    font-weight: bolder;
 }
 
-.reqHead{
-   
+.reqHead {
+
     margin-bottom: 50px;
+}
+
+.ApplyBtn {
+    color: white;
+    background-color: rgb(148, 122, 209);
+    text-decoration: none;border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin-left: 20px;
+
+
 }
