project details showed in userside

--- a/src/Components/User/ProjectDisplay/ProjectDisplay.css
+++ b/src/Components/User/ProjectDisplay/ProjectDisplay.css
@@ -1,7 +1,35 @@
-.myAccordion{
-    margin: 30px;
+.myAccordion {
+  margin: 30px;
 }
 
-.accordionMainDiv{
-    min-height: 460px;
+.accordionMainDiv {
+  min-height: 460px;
+}
+
+.projectDate {
+  padding-left: 220px;
+}
+
+.descriptionDiv {
+  display: flex;
+  flex-direction: row;
+}
+
+.projectImg {
+  display: flex;
+}
+
+.Pimage {
+  width: 200px;
+  height: 150px;
+  object-fit:cover;
+
+  
+}
+.projectDesc {
+  display: flex;
+}
+
+.website{
+   margin-left: 200px;
 }
