--- a/src/Components/User/UserAppliedCert/UserAppliedCert.css
+++ b/src/Components/User/UserAppliedCert/UserAppliedCert.css
@@ -5,7 +5,7 @@
 .certDetailsDiv{
     width: 100%;
     height: 60px;
-    background-color:aqua;
+    background-color:#d0e2ff;
     border-radius: 5px;
     display: flex;
     padding: 12px;
