facing marriage cert download issue

--- a/src/Components/User/ViewMarriageCert/ViewMarriageCert.css
+++ b/src/Components/User/ViewMarriageCert/ViewMarriageCert.css
@@ -1,3 +1,37 @@
-.ViewMarriageCertMainDiv{
-    margin: 20px;
+
+.ViewMarriageCertMainDivOne{
+    margin-left: 0;
 }
+.certHeading{
+font-weight:900;
+margin-bottom: 20px;
+}
+
+.rulePara{
+    font-size:medium;
+    font-weight:200;
+}
+
+.govImageLogo{
+    width: 140px;
+}
+
+.certHeading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+
+  
+  .centerContent {
+    text-align: center;
+  }
+  
+
+  .bottomPart{
+
+    margin:10px;
+  }
